# termcolor

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  build.sh  publish.sh  pyproject.toml  tox.ini
.github/workflows/: build.yml
docs/: CHANGES.MD
termcolor/: __init__.py  __main__.py
test/: test_everything.py
