[tool.poetry]
name = "termcolor-whl"
version = "1.1.3"
description = "ANSI Color formatting for output in terminal, fork of termcolor, maintained as of 2023 by Matthew Martin"

authors = [
    "Konstantin Lepa <konstantin.lepa@gmail.com>",
    "Matthew Martin <matthewdeanmartin@gmail.com>"
]
keywords = ["terminals", "ansi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "termcolor" },
]
include = [
    "termcolor/**/*.py",
]
exclude = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/termcolor"
homepage = "https://github.com/matthewdeanmartin/termcolor"
documentation = "https://github.com/matthewdeanmartin/termcolor"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/termcolor/issues"
"Change Log" = "https://github.com/matthewdeanmartin/termcolor/blob/main/docs/CHANGES.MD"

[tool.poetry.scripts]


[tool.poetry.dependencies]
# per vermin's estimation
python = ">=2.6 || >=3.0"

[tool.poetry.dev-dependencies]
tox = "*"
flake8 = "*"
pylint = "*"
pytest-cov = ">=2.10.1"
pytest = "==6.0.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
